--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ firebase.initializeApp(config);
 
 
     <div class="jumbotron text-center" style="">
-      <h1 class="display-3">Farid hezael Celaya Torres Sábado 31 de Agosto 2019 10:45 p.m.</h1>
+      <h1 class="display-3">Farid hezael Celaya Torres Sábado 31 cambio2</h1>
       <p class="lead">Firebase</p>
       <hr class="my-4">
       <h5>Firebase</h5>
